--- a/package.json
+++ b/package.json
@@ -13,20 +13,30 @@
     "@fortawesome/free-brands-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@netlify/plugin-nextjs": "^4.32.2",
     "@next/font": "13.1.6",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "bootstrap": "^5.2.3",
+    "moment": "^2.29.4",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-calendar": "^4.0.0",
     "react-dom": "18.2.0",
+    "react-horizontal-scrolling-menu": "^3.2.5",
+    "react-textarea-autosize": "^8.4.0",
+    "recoil": "^0.7.7",
+    "styled-components": "^5.3.6",
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/react-calendar": "^3.9.0",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "^8.34.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
