--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@netlify/plugin-nextjs": "^4.32.2",
     "@next/font": "13.1.6",
+    "@tanstack/react-query": "^4.28.0",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "moment": "^2.29.4",
     "next": "13.1.6",
