--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@netlify/plugin-nextjs": "^4.32.2",
     "@next/font": "13.1.6",
     "@tanstack/react-query": "^4.28.0",
+    "@tanstack/react-query-devtools": "^4.29.0",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
