--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-calendar": "^4.0.0",
     "react-dom": "18.2.0",
     "react-horizontal-scrolling-menu": "^3.2.5",
+    "react-js-pagination": "^3.0.3",
     "react-textarea-autosize": "^8.4.0",
     "recoil": "^0.7.7",
     "styled-components": "^5.3.6",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@types/react-calendar": "^3.9.0",
+    "@types/react-js-pagination": "^3.0.4",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
