--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-calendar": "^4.0.0",
     "react-dom": "18.2.0",
     "react-horizontal-scrolling-menu": "^3.2.5",
+    "react-intersection-observer": "^9.5.2",
     "react-js-pagination": "^3.0.3",
     "react-textarea-autosize": "^8.4.0",
     "recoil": "^0.7.7",
